fix nav link spacing for pre-iOS9

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -141,7 +141,11 @@ nav ul {
     nav ul {
         margin-top: 0;
         display: flex;
-        place-content: space-around;
+        justify-content: space-around;
+        
+        // use vendor prefix for pre-iOS9.0 browsers
+        display: -webkit-flex;
+        -webkit-justify-content: space-around;
     }
 }
 
@@ -469,7 +473,8 @@ nav li a {
 
 .social-wrap {
     width: 60vw;
-    padding: 0.3rem 0.3rem 1.8rem 0.3rem;
+    height: auto;
+    padding: 0.3rem 0.3rem 0 0.3rem;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -535,12 +540,10 @@ nav li a {
 footer {
     color: #000000;
     font-size: 0.6rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: end; 
-    align-items: center;
     margin-bottom: 1em;
     opacity: 0.8;
+    float: right;
+    padding: 0 1rem;
 }
 
 /* to do
